# HexaMotion

./: README.md
Controller/: CMakeLists.txt
Controller/src/: HmiBridge.cpp  HmiBridge.h  main.cpp
Modules/shared/: RdtJson.h  RdtProtocol.h
